# pyprofiler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: graph.py  memory.py  timing.py
pyprofiler/: __init__.py  callgraph.py  cli.py  cprofile.py  memory_profiler.py  passthrough.py  profiler.py  stopwatch.py  tracemalloc.py  viztracer.py
pyprofiler/utils/: __init__.py  decorator.py  dispatchers.py  io.py  loader.py  logging.py
